<resources>
    <string name="app_name">PictureNasa</string>
    <string name="photo_of_the_day_stub">Photo Of The Day</string>
    <string name="rover_photo_mars">Photo of Mars</string>
    <string name="search_wiki">Поиск в вики</string>
    <string name="wiki_helper_text">количество доступных символов</string>
    <string name="favourite">любимый</string>
    <string name="settings">настройки</string>
    <string name="search">поиск</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="plus">plus</string>
    <string name="explanation">Explanation</string>
    <string name="earth">Позавчера</string>
    <string name="weather">Вчера</string>
    <string name="mars">Сегодня</string>

</resources>